--- a/KiemTra_DoTranSang_1911061851/Web.config
+++ b/KiemTra_DoTranSang_1911061851/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-KiemTra_DoTranSang_1911061851-20220613010907.mdf;Initial Catalog=aspnet-KiemTra_DoTranSang_1911061851-20220613010907;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="Test01ConnectionString" connectionString="Data Source=LAPTOP-L46AP82B\SQLEXPRESS;Initial Catalog=Test01;User ID=sa;Password=123456"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
